// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalAlert Mounted should show details 1`] = `
<div
  className=""
>
  <Snackbar
    onDismiss={[Function]}
    status="danger"
  >
    <div>
      <div>
        details
      </div>
    </div>
  </Snackbar>
</div>
`;

exports[`GlobalAlert Shallow should render with error details 1`] = `
<div
  className=""
>
  <Snackbar
    onDismiss={[Function]}
    status="danger"
  >
    <div>
      <div>
        Oh no
         
        <a
          onClick={[Function]}
        >
          View Details
        </a>
      </div>
    </div>
  </Snackbar>
</div>
`;

exports[`GlobalAlert Shallow should render with no props 1`] = `
<div
  className=""
>
  <Snackbar
    onDismiss={[Function]}
    status="default"
  >
    <div>
      <div>
         
      </div>
    </div>
  </Snackbar>
</div>
`;

exports[`GlobalAlert Shallow should render without error details 1`] = `
<div
  className=""
>
  <Snackbar
    onDismiss={[Function]}
    status="danger"
  >
    <div>
      <div>
        Oh no
         
      </div>
    </div>
  </Snackbar>
</div>
`;
